src/objects/User.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__Account_ID__c</fullName>
        <label>Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Account__c</fullName>
        <formula>Contact.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Broadcast_ticker_speed__c</fullName>
        <inlineHelpText>Enter a value between 1 and 10,where 1=Slow and 10=Fast</inlineHelpText>
        <label>Broadcast ticker speed</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Building__c</fullName>
        <label>Building</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ContactId__c</fullName>
        <label>ContactId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Extension__c</fullName>
        <formula>Extension</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extension</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FPLoginID__c</fullName>
        <inlineHelpText>This field stores the Login ID of the validated BMC FootPrints Asset Core user.</inlineHelpText>
        <label>FootPrints Login ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FP_Login_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FootPrints Login Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ImageName__c</fullName>
        <label>Image Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IsOutOfOffice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out of Office</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IsStaffUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ServiceDesk Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Manage_ServiceDesk_Staff_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manage ServiceDesk Staff Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Picture__c</fullName>
        <formula>IMAGE(&quot;/resource/&quot; + BMCServiceDesk__ImageName__c ,  FirstName + &quot; &quot; + LastName, 80, 80 )</formula>
        <label>Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Remedyforce_Knowledge_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remedyforce Knowledge User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Room__c</fullName>
        <label>Room</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SelfService_Preferences__c</fullName>
        <description>SelfService user preference settings</description>
        <label>SelfService Preferences</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__UniqueUserIDInSource__c</fullName>
        <description>This is the unique field which identifies the user in the source object from where the user is getting imported. This is usually the LDAP or AD username or any other similar identifier</description>
        <externalId>true</externalId>
        <label>Unique User ID in Source</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if the user is VIP.</inlineHelpText>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__pager__c</fullName>
        <label>Pager</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__remarks__c</fullName>
        <label>Remarks</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__skipQVWizIntro__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Skip QV Wizard Introduction screen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CoursesIManage__c</fullName>
        <label>Courses I Manage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Degrees__c</fullName>
        <label>Degrees</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeLastDayOfEmployment__c</fullName>
        <description>E_LAST_DAY_OF_EMPLOYMENT from the WGUSALESFORCE.EMPLOYEES table.</description>
        <label>Employee Last Day Of Employment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EmployeeStatusType__c</fullName>
        <description>The E_STATUS_TYPE from the WGUSALESFORCE.EMPLOYEES table.</description>
        <label>Employee Status Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnrollmentMultiplier__c</fullName>
        <description>Used in Assignment of ECs</description>
        <label>Enrollment Multiplier</label>
        <precision>18</precision>
        <scale>16</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HR_Employee_Number__c</fullName>
        <description>This is from the ADP system</description>
        <inlineHelpText>ADP HR Employee Number</inlineHelpText>
        <label>HR Employee Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Manager_Number__c</fullName>
        <description>ADP mananger employee number</description>
        <label>HR Manager Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HireDate__c</fullName>
        <label>Date of Hire or Rehire</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDMRequiresUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by the IDM to detect if changes occurred on this user record. Marked true by on update process handler, either workflow or trigger. Marked false when IDM completes processing the record.</description>
        <inlineHelpText>Used by the IDM to detect if changes occurred on this user record. Marked true by on update process handler, either workflow or trigger. Marked false when IDM completes processing the record.</inlineHelpText>
        <label>IDM Requires Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IdeasModerator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to identify moderators to trigger workflows.</description>
        <label>Ideas Moderator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsEmployee__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If this user is an employee please check this</description>
        <inlineHelpText>Checked if this user is an employee</inlineHelpText>
        <label>IsEmployee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsInMentorPilot__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this person is a member of the mentor pilot.</description>
        <label>Is In Mentor Pilot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewUserName__c</fullName>
        <description>Temporary field for holding anew Username value while Email notification is disabled.</description>
        <label>NewUserName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIDM__c</fullName>
        <defaultValue>&quot;000000&quot;</defaultValue>
        <description>User PIDM which is unique across the global WGU scheme</description>
        <externalId>true</externalId>
        <inlineHelpText>User PIDM</inlineHelpText>
        <label>PIDM</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ProfileName__c</fullName>
        <description>A synchronization field written by UserTrigger/UserUtility to reference the current Profile.Name for users that do not have the View Setup &amp; Configuration system permission, without which a SELECT Profile.Name from User call fails.</description>
        <label>ProfileName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QAPercentage__c</fullName>
        <description>Percent at which user&apos;s assigned objects will be sent to QA</description>
        <label>QA Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RoleName__c</fullName>
        <formula>UserRole.Name</formula>
        <label>Role Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WGUCity__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WGUCountry__c</fullName>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WGUPostalCode__c</fullName>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WGUState__c</fullName>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WGUStreet__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WGU_Campus_URL__c</fullName>
        <label>WGU Campus URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>WGU_PKID__c</fullName>
        <description>WGUSalesForce.Employee pkid</description>
        <externalId>true</externalId>
        <label>WGU PKID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qualtrics__QualtricsURL__c</fullName>
        <description>Optional url to the Qualtrics system.  A default url will be used if this is not specified.</description>
        <label>QualtricsURL</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>qualtrics__QualtricsUserName__c</fullName>
        <label>QualtricsUserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>NoAccessProfile</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>NoAccess</value>
        </filters>
        <label>NoAccess Profile</label>
        <sharedTo>
            <group>SRMSupport</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Search</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Smith</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>contains</operation>
            <value>Erin</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Student Profile</value>
        </filters>
        <label>Search</label>
    </listViews>
    <listViews>
        <fullName>Standard_User_Licenses</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>PIDM__c</columns>
        <columns>STORAGE_USED</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S</value>
        </filters>
        <label>Standard User Licenses</label>
    </listViews>
    <listViews>
        <fullName>StudentUsers</fullName>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>notEqual</operation>
            <value>S</value>
        </filters>
        <label>Student Users</label>
        <sharedTo>
            <role>IT_Group</role>
        </sharedTo>
    </listViews>
    <namedFilters>
        <fullName>BMCServiceDesk__nf_01I90000000P118EAC_00N90000002lHGuEAM</fullName>
        <active>false</active>
        <errorMessage>Initiator ID must be active.</errorMessage>
        <field>BMCServiceDesk__Change_Request__c.BMCServiceDesk__FKInitiator__c</field>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Change Request_Initiator ID</name>
    </namedFilters>
    <namedFilters>
        <fullName>BMCServiceDesk__nf_01I90000000P11NEAS_00N90000002lHJqEAM</fullName>
        <active>true</active>
        <booleanFilter>(1 OR 2) OR 3</booleanFilter>
        <field>BMCServiceDesk__Incident__c.BMCServiceDesk__FKClient__c</field>
        <filterItems>
            <field>$Source.BMCServiceDesk__FKAccount__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>User.BMCServiceDesk__Account__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>$Source.BMCServiceDesk__FKAccount__c</field>
            <operation>equals</operation>
            <valueField>User.Contact.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Incident_Client ID</name>
        <sourceObject>BMCServiceDesk__Incident__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>BMCServiceDesk__nf_01I90000000hFMnEAM_00N90000003zWQqEAM</fullName>
        <active>true</active>
        <field>BMCServiceDesk__Broadcasts__c.BMCServiceDesk__FKStaff__c</field>
        <filterItems>
            <field>User.BMCServiceDesk__IsStaffUser__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Broadcast_Staff</name>
    </namedFilters>
    <namedFilters>
        <fullName>BMCServiceDesk__nf_01I90000000hFMzEAM_00N90000003zWQrEAM</fullName>
        <active>true</active>
        <field>BMCServiceDesk__Change_Request__c.BMCServiceDesk__FKStaff__c</field>
        <filterItems>
            <field>User.BMCServiceDesk__IsStaffUser__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Change Request_Staff</name>
    </namedFilters>
    <namedFilters>
        <fullName>BMCServiceDesk__nf_01I90000000hFNEEA2_00N90000002y7J9EAI</fullName>
        <active>true</active>
        <field>BMCServiceDesk__Incident__c.BMCServiceDesk__FKOpenBy__c</field>
        <filterItems>
            <field>User.BMCServiceDesk__IsStaffUser__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Incident_Staff</name>
    </namedFilters>
    <namedFilters>
        <fullName>BMCServiceDesk__nf_01I90000000hFNMEA2_00N90000003zWQsEAM</fullName>
        <active>true</active>
        <field>BMCServiceDesk__Problem__c.BMCServiceDesk__FKStaff__c</field>
        <filterItems>
            <field>User.BMCServiceDesk__IsStaffUser__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Problem_Staff</name>
    </namedFilters>
    <namedFilters>
        <fullName>BMCServiceDesk__nf_01I90000000hFOPEA2_00N90000002y7RuEAI</fullName>
        <active>true</active>
        <field>BMCServiceDesk__Task__c.BMCServiceDesk__FKOpenBy__c</field>
        <filterItems>
            <field>User.BMCServiceDesk__IsStaffUser__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Task_Staff</name>
    </namedFilters>
    <namedFilters>
        <fullName>BMCServiceDesk__nf_01I90000000iChlEAE_00N90000003T2hHEAS</fullName>
        <active>true</active>
        <field>BMCServiceDesk__Release__c.BMCServiceDesk__FKReleaseCoordinator__c</field>
        <filterItems>
            <field>User.BMCServiceDesk__IsStaffUser__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Release_Release Coordinator</name>
    </namedFilters>
    <namedFilters>
        <fullName>BMCServiceDesk__nf_01I90000000iJ5EEAU_00N90000003zKohEAE</fullName>
        <active>true</active>
        <field>BMCServiceDesk__Release__c.BMCServiceDesk__FKStaff__c</field>
        <filterItems>
            <field>User.BMCServiceDesk__IsStaffUser__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Release_Staff</name>
    </namedFilters>
    <namedFilters>
        <fullName>BMCServiceDesk__nf_01I90000000ptwjEAA_00N90000004WwtUEAS</fullName>
        <active>true</active>
        <field>BMCServiceDesk__Chatter_Listener__c.BMCServiceDesk__Auto_Reply_User__c</field>
        <filterItems>
            <field>User.BMCServiceDesk__IsStaffUser__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Chatter Listener_Auto Reply User</name>
    </namedFilters>
    <namedFilters>
        <fullName>Case_00Na0000009SvApEAK</fullName>
        <active>true</active>
        <field>Case.ApprovingManager__c</field>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <filterItems>
            <field>User.IsEmployee__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Case_Approving Manager</name>
    </namedFilters>
    <namedFilters>
        <fullName>Opportunity_Owner</fullName>
        <active>false</active>
        <field>Opportunity.OwnerId</field>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>Enrollment Team</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Opportunity_Opportunity Owner</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I30000001tKPJEA2_00N30000009PlPLEA0</fullName>
        <active>true</active>
        <field>FieldExperience__c.Mentor__c</field>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Mentor</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Field Experience_Mentor</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I30000001tKPLEA2_00Na0000009SNjZEAW</fullName>
        <active>true</active>
        <field>StudentProcess__c.ApprovingManager__c</field>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <filterItems>
            <field>User.IsEmployee__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Student Process_Approving Manager</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IS00000004uMcMAI_00NS00000012vv2MAA</fullName>
        <active>true</active>
        <field>WGURolesAttributes__c.User__c</field>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Enrollment Counselor</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Enrollment Counselor_User</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ia0000001u0SfEAI_00Na0000009RUhHEAW</fullName>
        <active>false</active>
        <booleanFilter>1</booleanFilter>
        <field>SRMChange__c.WorkCompletedBy__c</field>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>SRM Change_Work Completed By</name>
    </namedFilters>
    <validationRules>
        <fullName>BMCServiceDesk__Validate_FootPrints_Login</fullName>
        <active>false</active>
        <errorConditionFormula>IF(NOT(ISCHANGED(BMCServiceDesk__FPLoginID__c) ), false, IF(ISBLANK( BMCServiceDesk__FPLoginID__c), false, IF(BMCServiceDesk__FP_Login_Validated__c,false, true)))</errorConditionFormula>
        <errorMessage>You can only delete the BMC FootPrints Asset Core Login ID, but you cannot edit it here.</errorMessage>
    </validationRules>
</CustomObject>